--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
         <div id="box2">
             <div id="text">
-                Resin<br>Art
+                Resin<br>Artlii
             </div>
         </div>
         <div id="box3">
